k8s/network/soc-default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: soc
spec:
  podSelector: {}
  policyTypes:
    - Ingress
